[metadata]
name = sdflexutils
summary = Client Library for interfacing with various devices in HPE Superdome Flex Servers.
description-file =
    README.rst
license = Apache License, Version 2.0
author = Hewlett Packard Enterprise
#author-email = proliantutils@gmail.com
home-page = https://github.hpe.com/sdflex/sdflexutils
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    sdflexutils

[entry_points]
ironic_python_agent.hardware_managers =
    hpe-sdflex = sdflexutils.ipa_hw_manager.hardware_manager:SDFlexHardwareManager
